--- a/src/scss/layout/_global.scss
+++ b/src/scss/layout/_global.scss
@@ -11,6 +11,7 @@ html,
 body,
 main{
   min-height: 100%;
+  min-height: 100vh;
   height: auto;
 }
 body{
